--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/Grad Pic 1.jpg" />
+  <link rel="icon" href="%PUBLIC_URL%/SRMakes Logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#212428" />
   <meta name="description" content="Sami Rahman's Portfolio" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/Grad Pic 1.jpg" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/SRMakes Logo.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
